# product_intelligence

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: application.py  lifespan.py  main.py
backend/app/core/: config.py  constants.py  logging.py  paths.py  settings.py
backend/tests/: test_application.py  test_environment.py  test_lifespan.py  test_main.py
backend/tests/core/: test_config.py  test_logging.py  test_paths.py  test_settings.py
