[project]
name = "product-intelligence-backend"
version = "0.1.0"
description = "Multi-Modal Product Intelligence Engine — backend service"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.139.2",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "httpx>=0.28.1",
    "mypy>=2.3.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]

# ----------------------------------------------------------------------------
# Ruff — linting + import sorting
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports (enforces absolute imports)
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line length is enforced by black instead
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
docstring-code-format = true

# ----------------------------------------------------------------------------
# Black — code formatting
# ----------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'

# ----------------------------------------------------------------------------
# MyPy — static type checking
# ----------------------------------------------------------------------------
[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.12"
mypy_path = "."
explicit_package_bases = true
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ----------------------------------------------------------------------------
# Pytest — test runner
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra --strict-markers --strict-config --cov=app --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

# ----------------------------------------------------------------------------
# Coverage
# ----------------------------------------------------------------------------
[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
